add ke auto model and build segment api

--- a/external/mlsql-ets/pom.xml
+++ b/external/mlsql-ets/pom.xml
@@ -70,6 +70,13 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
