Revert "#1465 make project and module parent version as the same."

--- a/streamingpro-flink/pom.xml
+++ b/streamingpro-flink/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>${revision}</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
