--- a/streamingpro-spark-3.0.0-adaptor/pom.xml
+++ b/streamingpro-spark-3.0.0-adaptor/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>${revision}</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
