refactor: issue # 1477 To build a  release tar ball

--- a/.gitignore
+++ b/.gitignore
@@ -172,4 +172,4 @@ streamingpro-mlsql/spark-warehouse
 external/mlsql-native-operators/cmake-build-debug-ubuntu/
 external/mlsql-native-operators/.clion.source.upload.marker
 external/mlsql-native-operators/build/
-cifar.tgz
+*.tgz
