--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <name>StreamingPro Parent POM</name>
     <url>https://github.com/allwefantasy/streamingpro</url>
-    <description>With MLSQL,you can unifies big data and machine learning,one language, one platform.
+    <description>With MLSQL,you can unify big data and machine learning,one language, one platform.
     </description>
     <licenses>
         <license>
