run-test.sh support 3.1.1

--- a/streamingpro-it/pom.xml
+++ b/streamingpro-it/pom.xml
@@ -13,7 +13,7 @@
         <breeze-version>0.13.2</breeze-version>
     </properties>
 
-    <artifactId>streamingpro-it</artifactId>
+    <artifactId>streamingpro-it-${spark.bigversion}_${scala.binary.version}</artifactId>
     <dependencies>
 
         <dependency>
