--- a/streamingpro-it/pom.xml
+++ b/streamingpro-it/pom.xml
@@ -154,7 +154,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
