--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,11 +19,8 @@
 
 name: Build and test
 
-on:
-  pull_request:
-    branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: pull_request
+
 jobs:
   # Build: build MLSQL and run the tests
   build:
