--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ dev/docker/lib/
 streamingpro-cluster/dev/mlsql-cluster-docker/*.jar
 streamingpro-cluster/dev/mlsql-cluster-docker/*.tar.gz
 dev/sync-doc.sh
+dev/*.jar
 docs/gitbook/zh/_book/
 docs/gitbook/en/_book/
 contri/streamingpro-automl/logs/
