--- a/streamingpro-spark-3.0.0-adaptor/pom.xml
+++ b/streamingpro-spark-3.0.0-adaptor/pom.xml
@@ -81,9 +81,9 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
         </dependency>
     </dependencies>
 </project>
