Revert "fix sendEmail & update javax.mail version (#1660)"
This reverts commit ddffed0c7f0839763e70703afefa59403966349e.

--- a/streamingpro-spark-3.0.0-adaptor/pom.xml
+++ b/streamingpro-spark-3.0.0-adaptor/pom.xml
@@ -81,9 +81,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
         </dependency>
     </dependencies>
 </project>
