--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -15,6 +15,7 @@
 <!--         <spark.version>2.4.3</spark.version> -->
 <!--         <spark.bigversion>2.4</spark.bigversion> -->
 <!--         <scalatest.version>3.0.3</scalatest.version> -->
+<!--        <scalatest.version>1.17.0</scalatest.version>-->
         <!-- spark 2.4 end -->
 
         <!-- spark 3.0 start -->
@@ -22,7 +23,8 @@
         <scala.binary.version>2.12</scala.binary.version> 
         <spark.version>3.1.1</spark.version> 
         <spark.bigversion>3.0</spark.bigversion> 
-        <scalatest.version>3.0.3</scalatest.version> 
+        <scalatest.version>3.0.8</scalatest.version>
+        <mockito-scala.version>1.17.0</mockito-scala.version>
         <!-- spark 3.0 end -->
     </properties>
     <artifactId>streamingpro-core-${spark.bigversion}_${scala.binary.version}</artifactId>
@@ -162,13 +164,43 @@
             </exclusions>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.scalatest</groupId>-->
+<!--            <artifactId>scalatest_${scala.binary.version}</artifactId>-->
+<!--            <version>${scalatest.version}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.scalatestplus</groupId>-->
+<!--            <artifactId>mockito-3-4_${scala.binary.version}</artifactId>-->
+<!--            <version>3.2.10.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.scalatestplus</groupId>-->
+<!--            <artifactId>junit-4-13_${scala.binary.version}</artifactId>-->
+<!--            <version>3.2.10.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <version>${scalatest.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
-       
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
