Add the commons-lang3 dependencies

--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -321,6 +321,10 @@
                     <artifactId>mlsql-autosuggest-${spark.bigversion}_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </dependency>
             </dependencies>
         </profile>
 
@@ -379,6 +383,10 @@
                     <groupId>tech.mlsql</groupId>
                     <artifactId>mlsql-autosuggest-${spark.bigversion}_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
                 </dependency>
             </dependencies>
         </profile>
