--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,16 @@
         <kylin-jdbc.version>3.1.0</kylin-jdbc.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <!--    <repositories>-->
     <!--        <repository>-->
     <!--            <id>aliyun</id>-->
