--- a/streamingpro-mlsql/src/main/resources-local/log4j.properties
+++ b/streamingpro-mlsql/src/main/resources-local/log4j.properties
@@ -22,6 +22,7 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=./logs/mlsql_engine.log
+log4j.appender.file.Append=true
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.file.rollingPolicy.fileNamePattern=./logs/mlsql_engine.%d.gz
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
