--- a/streamingpro-assembly/pom.xml
+++ b/streamingpro-assembly/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>tech.mlsql</groupId>
         <artifactId>streamingpro_2.12</artifactId>
-        <version>2.2.2</version>
+        <version>2.3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <build>
-        <finalName>mlsql-engine_${spark.bigversion}-${project.version}</finalName>
+        <finalName>byzer-lang-${spark.version}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
