--- a/streamingpro-it/pom.xml
+++ b/streamingpro-it/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro_2.12</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>2.2.2</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <properties>
@@ -15,7 +15,6 @@
 <!--         <scala.binary.version>2.11</scala.binary.version> -->
 <!--         <spark.version>2.4.3</spark.version> -->
 <!--         <spark.bigversion>2.4</spark.bigversion> -->
-<!--         <scalatest.version>3.0.3</scalatest.version> -->
         <!-- spark 2.4 end -->
 
         <!-- spark 3.0 start -->
@@ -23,7 +22,6 @@
         <scala.binary.version>2.12</scala.binary.version> 
         <spark.version>3.1.1</spark.version> 
         <spark.bigversion>3.0</spark.bigversion> 
-        <scalatest.version>3.0.3</scalatest.version>
         <!-- spark 3.0 end -->
 
     </properties>
@@ -42,13 +40,6 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <version>${scalatest.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -126,8 +117,8 @@
                         <currentVersion>${project.version}</currentVersion>
                         <maven.basedir>${project.basedir}</maven.basedir>
                         <maven.buildDirectory>${project.build.directory}</maven.buildDirectory>
-                        <maven.finalName>mlsql-engine_${spark.bigversion}-${project.version}</maven.finalName>
-                        <maven.finalJarName>streamingpro-mlsql-spark_${spark.bigversion}_${scala.binary.version}-${project.version}.jar</maven.finalJarName>
+                        <maven.finalName>byzer-lang-${spark.version}-${project.version}</maven.finalName>
+                        <maven.finalJarName>byzer-lang-${spark.version}-${scala.binary.version}-${project.version}.jar</maven.finalJarName>
                     </systemProperties>
                 </configuration>
                 <executions>
