--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>os-lib_${scala.binary.version}</artifactId>
             <version>${os-lib.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
 
