--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <json-path.version>2.2.0</json-path.version>
 
         <slf4j.version>1.7.5</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
         <logback.version>1.1.8</logback.version>
 
         
@@ -804,6 +805,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>apache-log4j-extras</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
