--- a/streamingpro-mlsql/src/main/resources-online/log4j.properties
+++ b/streamingpro-mlsql/src/main/resources-online/log4j.properties
@@ -15,15 +15,16 @@
 # limitations under the License.
 #
 # Set everything to be logged to the console
-log4j.rootCategory=INFO,file, console
+BYZER_LOG_HOME=./logs
+log4j.rootCategory=INFO, console,file
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./logs/mlsql_engine.log
+log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.file.File=${BYZER_LOG_HOME}/byzer-lang.log
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.file.rollingPolicy.fileNamePattern=./logs/mlsql_engine.%d.gz
+log4j.appender.file.rollingPolicy.fileNamePattern=${BYZER_LOG_HOME}/byzer-lang.%d.gz
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
 log4j.appender.file.MaxBackupIndex=5
@@ -39,6 +40,8 @@ log4j.logger.org.spark_project.jetty.util.component.AbstractLifeCycle=ERROR
 log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=INFO
 log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
 log4j.logger.org.apache.parquet=ERROR
+log4j.logger.org.apache.spark.ContextCleaner=ERROR
+log4j.logger.org.apache.spark.sql.catalyst.expressions.codegen.CodeGenerator=ERROR
 log4j.logger.parquet=ERROR
 # SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
